@@ -201,7 +201,12 @@ jgs //    /
                   - Translations added.
 
 6 Mar, 2019    'Css and translations fixings'
+
 6 Mar, 2019    'aria-selected to reading options'
                - in order to announce the selected reading option to screen reader users. 
 
+6 Mar, 2019    'link target indication enhancement'
+                  - If you choose link target self, then the links should not be signed as open in new window
+                  - if you choose blank, then each link should be indicated as open in new window.
+                  - This is php development, so next pageload will takes effect. 
 
